# strava-to-fittrackee

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  s2f.py
strava_to_fittrackee/: s2f.py
