[tool.poetry]
name = "strava-to-fittrackee"
version = "0.2.3"
description = "Pull workouts from Strava and upload to FitTrackee"
authors = ["Joshua Taillon <jat255@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "strava_to_fittrackee"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
python-dotenv = "^0.21.0"
gpxpy = "^1.5.0"
tqdm = "^4.64.1"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
preview = true
